--- a/index.html
+++ b/index.html
@@ -29,18 +29,23 @@
 		</div>
 	
 		<div class="calendar__week">
-			<div class="calendar__day calendar__item">Lun.</div>
-			<div class="calendar__day calendar__item">Mar.</div>
-			<div class="calendar__day calendar__item">Mie.</div>
-			<div class="calendar__day calendar__item">Jue.</div>
-			<div class="calendar__day calendar__item">Vie.</div>
-			<div class="calendar__day calendar__item">Sab.</div>
-			<div class="calendar__day calendar__item">Dom.</div>
+			<div class="calendar__day calendar__item" id="lun" >Lun.</div>
+			<div class="calendar__day calendar__item" id="mar">Mar.</div>
+			<div class="calendar__day calendar__item" id="mie">Mie.</div>
+			<div class="calendar__day calendar__item" id="jue">Jue.</div>
+			<div class="calendar__day calendar__item" id="vie">Vie.</div>
+			<div class="calendar__day calendar__item" id="sab">Sab.</div>
+			<div class="calendar__day calendar__item" id="dom">Dom.</div>
 	</div>
 
 	<div class="calendar__dates" id="dates"></div>
 	</div>
-	
+
+<!-- 
+	<div>
+		<div></div>
+	</div>
+	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<script src="js/app.js"></script>
